Avoid buttons wrapping on mobile

--- a/static/css/master.less
+++ b/static/css/master.less
@@ -10273,6 +10273,7 @@ ul#myreads-paginator li.selected:hover {
 .btn.primary {
   background-color: @primary-blue;
   border-radius: 3px;
+  white-space: nowrap;
 }
 
 a.btn {
